infra/overlays/production/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-celluloid-me
spec:
  redirectRegex:
    permanent: true
    regex: ^https://celluloid\\.huma-num\\.fr/(.*)
    replacement: https://celluloid.me/${1}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: celluloid
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: celluloid.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: celluloid-huma-num-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: celluloid-production-redirect-to-celluloid-me@kubernetescrd
spec:
  rules:
    - host: celluloid.huma-num.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
